--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,60 @@
+asttokens==2.4.1
 attrs==23.2.0
 certifi==2024.6.2
+click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
+decorator==5.1.1
+executing==2.0.1
+fonttools==4.53.0
 h11==0.14.0
 idna==3.7
+ipython==8.25.0
+jedi==0.19.1
+joblib==1.4.2
+kiwisolver==1.4.5
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
+nltk==3.8.1
+numpy==2.0.0
+opencv-python-headless==4.10.0.84
 outcome==1.3.0.post0
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+prompt_toolkit==3.0.47
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.18.0
+pyparsing==3.1.2
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+PyQt6==6.7.0
+PyQt6-Qt6==6.7.1
+PyQt6-sip==13.6.0
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
+regex==2024.5.15
 ruamel.yaml==0.17.40
 ruamel.yaml.clib==0.2.8
+seaborn==0.13.2
 selenium==4.21.0
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+stack-data==0.6.3
+tqdm==4.66.4
+traitlets==5.14.3
 trio==0.25.1
 trio-websocket==0.11.1
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.1
+wcwidth==0.2.13
+wordcloud==1.9.3
 wsproto==1.2.0
